Eslint and prettier indentation set to 2 spaces

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,10 +11,12 @@
         "prettier"
     ],
     "rules": {
+        "indent": ["error", 2],
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "prettier/prettier": [
             "error", {
-                "singleQuote": true
+                "singleQuote": true,
+                "tabWidth": 2
             }
         ]
     }
